# Safeguard

./: .gitignore  Cargo.toml  LICENSE  README.md
.agents/plugins/: marketplace.json
crates/safeguard-core/: Cargo.toml
crates/safeguard-core/src/: file.rs  hash.rs  lib.rs  state.rs  text.rs
crates/safeguard-hook/: Cargo.toml
crates/safeguard-hook/src/: main.rs
crates/safeguard-mcp/: Cargo.toml
crates/safeguard-mcp/src/: main.rs
crates/safeguard-protocol/: Cargo.toml
crates/safeguard-protocol/src/: lib.rs
crates/safeguard-transaction/: Cargo.toml
crates/safeguard-transaction/src/: lib.rs
docs/: execution-protocol.md
plugins/safeguard/: .mcp.json  .mcp.linux.json  .mcp.windows.json  README.md
plugins/safeguard/.codex-plugin/: plugin.json
plugins/safeguard/hooks/: hooks.json  hooks.linux.json  hooks.windows.json
plugins/safeguard/skills/safeguard/: SKILL.md
scripts/: build-plugin-binaries.ps1  build-plugin-binaries.sh
