[workspace]
resolver = "3"
members = [
  "crates/safeguard-core",
  "crates/safeguard-hook",
  "crates/safeguard-mcp",
  "crates/safeguard-transaction",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"

