[package]
name = "safeguard-hook"
version = "1.3.4"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
safeguard-core = { path = "../safeguard-core" }
safeguard-protocol = { path = "../safeguard-protocol" }
safeguard-transaction = { path = "../safeguard-transaction" }
serde.workspace = true
serde_json.workspace = true
