[package]
name = "safeguard-mcp"
version = "1.2.1"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
safeguard-core = { path = "../safeguard-core" }
safeguard-transaction = { path = "../safeguard-transaction" }
serde.workspace = true
serde_json.workspace = true



